--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
