--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jquery": "^3.5.27",
     "@types/lodash": "^4.14.202",
     "@types/qs": "^6.9.11",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
